--- a/Frontend/src/Components/NextPlay/NextPlay.css
+++ b/Frontend/src/Components/NextPlay/NextPlay.css
@@ -277,6 +277,7 @@ body {
     margin: 0 auto;
     /* margin-right: 3rem; */
   }
+  
 
   .cta-button {
     width: 100%;
@@ -284,6 +285,13 @@ body {
 
   .faq-column {
     flex: 1 1 100%;
+  }
+}
+@media (max-width:652px)and (min-width:425px)
+{
+  .matching-section{
+    margin: 0 auto;
+    width:400px;
   }
 }
 @media (max-width: 375px){
