--- a/Frontend/src/Components/Footer/Footer.css
+++ b/Frontend/src/Components/Footer/Footer.css
@@ -47,7 +47,7 @@
 }
 
 .footer-logo {
-  width: 24%;
+  width: 35%;
 }
 
 .footer-logo svg {
@@ -56,7 +56,7 @@
 }
 
 .footer-social {
-  width: 38%;
+  width: 25%;
 }
 
 .footer-social img {
@@ -65,9 +65,13 @@
 }
 
 .footer-last-div h6 {
-  width: 38%;
+  /* width: 38%; */
   font-size: 1rem;
   text-align: center;
+  margin-top: 3%;
+}
+.footer-ten-funding{
+  width: 38%;
 }
 
 @media (max-width: 768px) {
@@ -77,7 +81,7 @@
   }
 
   .footer-details {
-    width: 45%;
+    /* width: 45%; */
     margin: 18px 0;
   }
 
@@ -88,26 +92,35 @@
   }
 
   .footer-logo {
-    width: 48%;
+    width: 25%;
   }
 
   .footer-social {
-    width: 48%;
+    width: 38%;
   }
-
-  .footer-last-div h6 {
+  .footer-ten-funding{
+    width: 26%;
+  }
+  /* .footer-last-div h6 {
     width: 100%;
     margin-top: 1rem;
     text-align: left;
-  }
+  } */
 }
 
 @media (max-width: 480px) {
+  .footer-details {
+    width: 45%;
+    margin: 18px 0;
+  }
   .footer-details h4 {
     font-size: 16px;
   }
 
   .footer-details ul {
     font-size: 16px;
+  }
+  .footer-ten-funding{
+    width: 100%;
   }
 }
