--- a/Frontend/src/Components/Home/Home.css
+++ b/Frontend/src/Components/Home/Home.css
@@ -2,6 +2,12 @@
   width: 100%;
   margin-top: 100px;
 }
+@media (max-width: 480px) {
+  .home-container {
+    width: 100%;
+    margin-top: 48px;
+  }
+}
 
 .home-header {
   width: 80%;
