--- a/Frontend/src/Components/Home/Home.css
+++ b/Frontend/src/Components/Home/Home.css
@@ -1,33 +1,36 @@
+/* Home Banner CSS */
 .home-container {
   width: 100%;
   margin-top: 100px;
-}
-@media (max-width: 480px) {
-  .home-container {
-    width: 100%;
-    margin-top: 48px;
-  }
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .home-header {
   width: 80%;
   background-image: linear-gradient(#dee2ff, #f9faff);
-  border-radius: 15px;
-  margin: 48px auto;
+  border-radius: 25px;
+  margin: 35px auto;
   padding: 48px;
 }
 
 .home-header h1 {
+  margin-left: 42px;
   font-size: 80px;
   font-weight: 400;
-  margin-bottom: 32px;
+  margin-bottom: 82px;
   line-height: 80px;
+}
+
+.home-header hr {
+  margin-left: 42px;
+  width: 90%;
 }
 
 .home-inner-div {
   display: flex;
   justify-content: space-between;
-  margin: 32px 0;
+  margin: 32px 42px;
 }
 
 .home-inner-div h2 {
@@ -36,16 +39,23 @@
 }
 
 .home-inner-div button {
-  width: 200px;
+  margin-right: 24px;
+  width: 220px;
   font-size: 18px;
-  padding: 16px;
+  padding: 12px;
   border-radius: 25px;
-  background-color: transparent;
+  background: linear-gradient(to top right, #dee2ff, #dee2ff 50%, transparent 50%);
+  background-size: 200% 200%;
+  background-position: bottom left;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: background-position 1.5s ease-in-out;
+  color: #000; /* Text color */
+  overflow: hidden;
 }
 
 .home-inner-div button:hover {
-  background-color: #dee2ff;
-  transition: 1.5s;
+  background-position: top right;
 }
 
 .hr-1 {
@@ -54,9 +64,88 @@
   margin-bottom: 50px;
 }
 
+/* Dropdown Menus CSS */
+.filter-section {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  gap: 15px;
+  margin: -10px 150px 0px;
+}
+
+.dropdown-container {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-button {
+  appearance: none;
+  width: 225px;
+  height: 55px;
+  text-align: start;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
+  margin-left: -5px !important;
+  border-radius: 30px !important;
+
+  border-color: transparent;
+  background-image: url(../../assets/arrow.svg);
+  background-size: 15%;
+  background-repeat: no-repeat;
+  background-position-x: 95%;
+  background-position-y: center;
+}
+
+.sector-dropdown-menu {
+  width: 320px;
+}
+
+.dropdown-container .dropdown-menu {
+  max-height: 350px;
+  position: absolute;
+  background-color: #eaeaff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.dropdown-item {
+  margin-bottom: 8px;
+}
+.dropdown-item :hover {
+  background-color: #dee2ff;
+}
+
+.dropdown-item:last-child {
+  margin-bottom: 0;
+}
+
+.dropdown-item label {
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.dropdown-option {
+  width: 100%;
+  background: none;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  padding: 8px 10px;
+}
+
+.dropdown-option:hover {
+  background-color: #dee2ff;
+}
+
+/* Search Button CSS */
 .Search {
   border-bottom: 1px solid;
-  width: 300px;
+  width: 350px;
   margin: 0px 0px 0px 210px;
   display: flex;
 }
@@ -79,119 +168,7 @@
   width: 50px;
 }
 
-.filter-section {
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  gap: 15px;
-  margin: -10px 150px 0px;
-  /* background-color: #103fe8 */
-}
-
-.filter-section select {
-  /* background-color: #e81010; */
-  border: 1px solid rgb(24, 22, 22);
-  position: relative;
-  width: 200px;
-  text-wrap: wrap;
-  text-align: left;
-  background-color: #d3e3fa;
-  font-size: 18px;
-  font-weight: 400;
-  margin-left: 20px;
-  border: none;
-  border-radius: 50px;
-  white-space: normal;
-  padding: 20px 20px;
-}
-/* .dropdown2 {
-  background-image: url(../../assets/arrow.svg);
-  background-size: 15%;
-  background-repeat: no-repeat;
-  background-position-x: 90%;
-  background-position-y: center;
-}
-
-.dropdown {
-  appearance: none;
-  width: 200px;
-  margin-left: 20px;
-  text-align: start;
-  padding-left: 20px;
-  margin-left: 20px;
-  border-radius: 50px;
-  border-color: transparent;
-} */
-
-/* Dropdown container styles */
-.dropdown-container {
-  position: relative;
-  display: inline-block;
-}
-
-/* Button styles */
-.dropdown-button {
-  appearance: none;
-  width: 230px;
-  height: 55px;
-  text-align: start;
-  padding-left: 20px;
-  margin-left: -5px !important;
-  border-radius: 30px !important;
-
-  border-color: transparent;
-  background-image: url(../../assets/arrow.svg);
-  background-size: 15%;
-  background-repeat: no-repeat;
-  background-position-x: 90%;
-  background-position-y: center;
-}
-
-/* Dropdown menu styles */
-.dropdown-container .dropdown-menu {
-  max-height: 350px;
-  position: absolute;
-  background-color: #eaeaff;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 10px;
-  margin-top: 5px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-}
-
-/* Dropdown item styles */
-.dropdown-item {
-  margin-bottom: 8px;
-}
-.dropdown-item :hover {
-  background-color: #dee2ff;
-}
-
-/* Last item spacing fix */
-.dropdown-item:last-child {
-  margin-bottom: 0;
-}
-
-/* Label styling */
-.dropdown-item label {
-  font-size: 14px;
-  cursor: pointer;
-}
-
-.dropdown-option {
-  width: 100%;
-  background: none;
-  border: none;
-  text-align: left;
-  cursor: pointer;
-  padding: 8px 10px;
-}
-
-.dropdown-option:hover {
-  background-color: #dee2ff;
-}
-
+/* Selected Filters (Tags) CSS */
 .selected-filters {
   display: flex;
   flex-wrap: wrap;
@@ -199,6 +176,7 @@
   margin: 20px 0;
   margin-left: 150px;
   margin-top: 10px;
+  width: 80%;
 }
 
 .tag {
@@ -218,10 +196,35 @@
   font-weight: bold;
 }
 
+/* Main Home Section CSS */
+.home-sec {
+  width: 80%;
+  margin: 4rem auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.home-sec-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home-sec-header h6 {
+  padding: 0 5rem;
+
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.home-sec-name {
+  margin-left: 35px;
+}
 
 .home-card {
   padding: 24px 12px;
   display: flex;
+  align-items: center;
   border-bottom: 0.5px solid rgb(250, 224, 250);
 }
 
@@ -232,7 +235,6 @@
 .home-card img {
   width: 50px;
   vertical-align: middle;
-  margin: 0px 5px;
 }
 
 .home-card p {
@@ -256,73 +258,46 @@
 .home-img div p {
   display: inline-flex;
   justify-content: start;
-  margin-left: 15px;
+  margin-left: 5px;
   width: 120px;
 }
 
-.home-sec {
-  width: 80%;
-  margin: 4rem auto;
+.btn-1,
+.btn-2 {
   display: flex;
-  flex-direction: column;
-}
-
-.home-sec-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.home-sec-header .lst {
-  margin-right: 3rem;
-}
-
-.home-sec-header h6 {
-  margin-left: 7rem;
-
-  font-size: 15px;
-  font-weight: 400;
-}
-
-#button-1 {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-top: 20px;
-  margin: 5px 5px;
-  color: #000;
-  background: #d3d3fa;
-  border: 1px white;
-  border-radius: 10px;
-  font-size: 13px;
-  font-weight: 400;
-  height: 35px;
-  width: fit-content;
-  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  width: 23%;
+  flex-direction: row;
+  gap: 5px;
+  margin-left: 35px;
 }
 
 .btn-1 {
-  width: 25%;
-  margin-right: 0px;
+  margin-right: 30px;
 }
 
 .btn-2 {
-  display: flex;
-  justify-content: end;
-  width: 25%;
+  margin-right: -100px;
 }
 
+#button-1,
 #button-2 {
   padding-left: 15px;
   padding-right: 15px;
-  margin-top: 20px;
-  margin: 5px 0px;
+  margin: 5px 0;
   color: #000;
-  background: #abdeeb;
-  border: 1px white;
+  background: #d3d3fa;
+  border: 1px solid white;
   border-radius: 10px;
   font-size: 13px;
   height: 35px;
   width: fit-content;
   cursor: pointer;
+}
+
+#button-2 {
+  background: #e5e5e5; /* For button 2 */
 }
 
 .load-more-btn {
@@ -333,11 +308,11 @@
   cursor: pointer;
   border-radius: 50px;
   border: 1px solid;
-  background-color: #fff;
+  background-color: #e0e0ff;
 }
 
 .load-more-btn:hover {
-  background-color: #f5c9f2;
+  background-color: #c8c8ff;
 }
 
 /* --------------------------------- Responsive Styles ---------------------*/
@@ -347,38 +322,75 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px) and (min-width : 769px) {
+  .home-container {
+    margin-top: 40px;
+  }
+
+  .home-header {
+    height: 35rem;
+    margin-top: 55px;
+    border-radius: 25px;
+  }
+
+  .home-header h1 {
+    font-size: 80px;
+    margin-top: 20px;
+  }
+
   .home-inner-div {
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
     margin-bottom: 24px;
   }
-  .home-header h1 {
-    font-size: 60px;
-  }
+
   .home-inner-div button {
-    padding: 12px;
+    padding: 5px;
+    height: 70px;
+    width: 200px;
+  }
+
+  .hr {
+    max-width:86%;
   }
 
   .hr-1 {
     width: 90%;
+  } 
+
+  .filter-section {
+    display: flex;
+    flex-direction: row;
+    gap: 15px; 
+  }
+
+  .dropdown-container {
+    margin-top: -5px;
+  }
+
+  .dropdown-button {
+    max-width: 240px;
+  }
+
+  .dropdown-menu {
+    font-size: 17px;
   }
 
   .Search {
     flex-wrap: wrap;
-    justify-content: center;
-    width: 88%;
-    margin: 16px 20px;
+    justify-content: flex-end;
+    width: 60%;
+    margin: 24px;
+    margin-left: -5px;
   }
 
   .Search input {
     font-size: 24px;
     width: 85%;
-    margin-bottom: 8px;
   }
 
   .serch-icon {
-    margin: 0 auto;
+    margin: 10px auto;
     height: 24px;
     width: 48px;
   }
@@ -391,103 +403,104 @@
     padding: 0 25px;
   }
 
-  .filter-section select {
-    width: 88%;
-    margin: 8px 0px;
+  .selected-filters {
+    margin-left: 30px;
+    width: 90%;
+  }
+
+  .home-sec {
+    /* margin: 1rem 60px; */
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+  }
+
+  .home-sec-header h6 {
+    padding: 1px;
+    font-size: 15px;
+    font-weight: 500;
+    margin-right: 20px;
+  }
+
+  .home-sec-name {
+    margin-left: 60px;
   }
 
   .home-card {
-    flex-wrap: wrap;
+    padding: 20px 12px;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    border-bottom: 0.5px solid rgb(250, 224, 250);
+    margin-left: -15px;
+    font-size: 16px;
   }
 
   .home-card img {
-    width: 40px;
-    margin: 5px 0;
+    width: 55px;
+    margin: 5px 10px;
   }
 
   .home-card p {
     width: 100%;
     text-align: center;
+    margin-right: 20px;
   }
 
-  .home-sec {
-    width: 90%;
-    margin: 32px auto;
+  .db-img {
+    /* margin: 20px; */
+    border-radius: 8px;
+    object-fit: cover;
+  }
+
+  .home-img {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
   }
 
-  .home-sec-header {
-    justify-content: space-evenly;
-    justify-items: center;
+  .home-img div p {
+    display: inline-flex;
+    justify-content: start;
+    /* margin-left: -10px; */
+    width: 120px;
   }
 
-  .home-sec-header .lst {
-    margin-bottom: 16px;
-  }
-
-  .home-sec-header h6 {
-    font-size: 14px;
-    margin: 0 20px;
-    text-align: center;
+  .btn-1,
+  .btn-2 {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    /* gap: 25px; */
   }
 
-  #button-1 {
+  .btn-1 {
+    margin-left: 95px;
+  }
+
+  .btn-2{
+    margin-left: 145px;
+  }
+
+  #button-1,
+  #button-2 {
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 20px;
-    margin: 5px 5px;
+    margin: 5px 10px;
     color: #000;
     background: #d3d3fa;
-    border: 1px white;
+    border: 1px solid white;
     border-radius: 10px;
     font-size: 13px;
-    font-weight: 400;
     height: 35px;
     width: fit-content;
     cursor: pointer;
   }
 
-  /* #button-1 {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-top: 20px;
-    /* margin: 5px 5px; */
-  /* color: #000;
-    background: #d3d3fa;
-    border: 1px white;
-    border-radius: 10px;
-    font-size: 13px; */
-  /* font-weight: 400;
-    height: 35px; */
-  /* width: fit-content; */
-  /* cursor: pointer;
-    grid-column-gap: 28px;
-    grid-row-gap: 28px;
-    border-bottom: 1px solid #d3d6e966;
-    grid-template-rows: auto;
-    grid-template-columns: 2fr 2fr 2fr 1.5fr;
-    grid-auto-columns: 1fr;
-    place-content: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    display: grid;
-  } */
-
   #button-2 {
-    width: fit-content;
-    margin: 10px auto;
-    font-size: 12px;
-    height: 30px;
-    padding: 5px 8px;
-  }
-
-  .btn-1,
-  .btn-2 {
-    justify-content: center;
-    width: 100%;
-    margin: 8px 0;
+    background: #e5e5e5;
   }
 
   .load-more-btn {
@@ -496,40 +509,106 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) and (min-width: 481px) {
+  .home-container {
+    width: 100%;
+    margin-top: 25px;
+    margin-left: 5px;
+  }
+
   .home-header {
-    padding: 30px;
+    height: 28rem;
+    margin-top: 55px;
+    margin-left: 35px;
+    /* margin-right: -1px; */
+    border-radius: 25px;
   }
 
   .home-header h1 {
-    font-size: 30px;
+    margin-top: 10px;
+    /* margin-left: -20px; */
+    font-size: 40px;
     line-height: 40px;
   }
 
+  .home-header hr {
+    width: 90%;
+    /* margin-left: -20px; */
+    margin-top: 100px;
+  }
+
   .home-inner-div {
+    display: flex;
+    margin-top: 40px;
+    flex-direction: column;
+    width: 90%;
     margin-bottom: 1rem;
   }
 
   .home-inner-div h2 {
-    font-size: 16px;
+    margin-top: -20px;
+    /* margin-left: -55px; */
+    font-size: 22px;
   }
 
   .home-inner-div button {
-    width: 160px;
-    font-size: 12px;
+    width: 250px;
+    font-size: 20px;
+    margin-right: 70px;
+    margin-top: 15px;
+  }
+
+  .hr-1 {
+    width: 88%;
+    margin-right: 50px;
+    margin-top: 5px;
+  }
+
+  .filter-section {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 20px 5%;
+    gap: 15px;
+  }
+
+  .dropdown-container {
+    margin-top: -5px;
+  }
+
+  .dropdown-button {
+    max-width: 220px;
+  }
+
+  .dataset-dropdown-button {
+    font-size: 20px !important;
+  }
+
+  .dropdown-menu {
+    height: 250px;
+    /* font-size: 16px; */
+  }
+
+  .sector-dropdown-menu {
+    width: 250px;
+  }
+
+  .dataset-dropdown-menu {
+    height: 180px;
   }
 
   .Search {
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     margin: 0;
-    width: 100%;
+    width: 60%;
+    margin-left: 55px;
+    margin-right: -20px;
+    margin-top: 5px;
+    margin-bottom: 20px;
   }
 
   .Search input {
-    font-size: 18px;
+    font-size: 24px;
     width: 90%;
-    margin-bottom: 10px;
   }
 
   .serch-icon {
@@ -538,64 +617,259 @@
     width: 48px;
   }
 
-  .filter-section {
-    flex-direction: column;
-    margin: 20px 5%;
+  .selected-filters {
+    margin-left: 30px;
     width: 90%;
-  }
-
-  .filter-section select {
-    width: 100%;
-    margin: 10px 0;
-  }
-
-  .home-card {
-    flex-direction: column;
-    align-items: center;
-    padding: 15px 0;
-  }
-
-  .home-card img {
-    width: 40px;
-    margin: 5px 0;
-  }
-
-  .home-card p {
-    width: 100%;
-    justify-content: center;
   }
 
   .home-sec {
-    width: 90%;
-    margin: 24px 5% 0;
-  }
-
-  .home-sec-header {
+    margin: 1rem 60px;
+    display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-
-  .home-sec-header .lst {
-    margin-right: 0;
-    margin-bottom: 1rem;
   }
 
   .home-sec-header h6 {
-    margin-left: 0;
-    font-size: 14px;
-    text-align: center;
+    padding: 1px;
+    font-size: 15px;
+    font-weight: 500;
+    margin-right: -20px;
+  }
+
+  .home-sec-name {
+    margin-left: 40px;
+  }
+
+  .home-card {
+    padding: 20px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 0.5px solid rgb(250, 224, 250);
+    margin-left: -200px;
+    font-size: 15px;
+  }
+
+  .home-card img {
+    width: 50px;
+    vertical-align: middle;
+  }
+
+  .home-card p {
+    /* width: 13%; */
+    display: flex;
+    justify-content: end;
+    margin-right: -120px;
+    /* margin-right: -50px; */
+  }
+
+  .db-img {
+    margin: 20px;
+    border-radius: 8px;
+    object-fit: cover;
+  }
+
+  .home-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+  }
+
+  .home-img div p {
+    display: inline-flex;
+    justify-content: start;
+    margin-left: -10px;
+    width: 120px;
+  }
+
+  .btn-1,
+  .btn-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 25px;
+  }
+
+  .btn-1 {
+    margin-right: -20px;
   }
 
   #button-1,
   #button-2 {
-    margin: 10px auto;
-    width: 90%;
-    height: 40px;
-    font-size: 14px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 5px 0;
+    color: #000;
+    background: #d3d3fa;
+    border: 1px solid white;
+    border-radius: 10px;
+    font-size: 12px;
+    height: 35px;
+    width: fit-content;
+    cursor: pointer;
+  }
+
+  #button-2 {
+    background: #e5e5e5;
   }
 
   .load-more-btn {
-    padding: 10px 20px;
+    width: 26%;
+    margin-bottom: 50px;
+  }
+}
+
+ @media (max-width: 480px) {
+  .home-container {
+    width: 95%;
+    margin-top: 10px;
+  }
+
+  .home-header {
+    height: 28rem;
+    margin-top: 20px;
+    margin-left: 24px;
+    border-radius: 25px;
+  }
+
+  .home-header h1 {
+    margin-top: -25px;
+    margin-left: -10px;
+    font-size: 35px;
+    line-height: 40px;
+  }
+
+  .home-header hr {
+    width: 120%;
+    margin-left: -20px;
+    margin-top: -40px;
+  }
+
+  .home-inner-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    margin-bottom: 1rem;
+  }
+
+  .home-inner-div h2 {
+    margin-top: -15px;
+    margin-left: -55px;
     font-size: 16px;
+  }
+
+  .home-inner-div button {
+    width: 200px;
+    font-size: 14px;
+    margin-right: 70px;
+    margin-top: 15px;
+  }
+
+  .hr-1 {
+    width: 85%;
+    margin-right: 16px;
+    margin-top: -15px;
+  }
+
+  .filter-section {
+    flex-direction: column;
+    margin: 20px;
+    margin-left: 10px;
+    width: 90%;
+  }
+
+  .dropdown-container {
+    margin-top: -5px;
+    margin-left: 12px;
+  }
+
+  .dropdown-button {
+    max-width: 180px;
+  }
+
+  .dropdown-menu {
+    height: 200px;
+  }
+
+  .sector-dropdown-menu {
+    width: 230px;
+  }
+
+  .Search {
+    flex-direction: row;
+    /* justify-content: center; */
+    align-items: center;
+    margin: 0;
+    margin-left: 10px;
+    width: 95%;
+    /* margin-top: 10px; */
+  }
+
+  .Search input {
+    font-size: 20px;
+    width: 90%;
+  }
+
+  .serch-icon {
+    margin: 10px 0 0 0;
+    height: 24px;
+    width: 48px;
+  }
+
+  .selected-filters {
+    margin-left: 20px;
+    width: 90%;
+  }
+
+  .home-sec {
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+    /* padding-left: 10px; */
+    width: 80%;
+    margin-top: 30px;
+  }
+
+  .home-sec-header {
+    display: none;
+  }
+
+  .home-card {
+    padding: 20px 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 0.5px solid rgb(250, 224, 250);
+    margin-left: -125px;
+    font-size: 14px;
+  }
+
+  .home-card img {
+    width: 50px;
+    vertical-align: middle;
+    margin: 5px 25px;
+  }
+
+  .home-card p {
+    width: 42%;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+  }
+
+  #button-1,
+  #button-2 {
+    display: none;
+  }
+
+  .load-more-btn {
+    width: 110px;
+    padding: 10px 10px;
+    font-size: 16px;
+    margin-bottom: 40px;
+    margin-left: 0px;
   }
 }
