--- a/Frontend/src/Components/RegistrationForm/Registration.css
+++ b/Frontend/src/Components/RegistrationForm/Registration.css
@@ -65,7 +65,9 @@
   border-radius: 5px;
   background-color: black;
   color: white;
-  padding: 10px;
+  padding: 10px 20px 10px 20px;
+  display: block;
+
 }
 .registration-form-content h2 {
   color: rgb(66, 66, 169);
@@ -158,6 +160,6 @@
     overflow: scroll;
   }
   .registration-form-content textarea {
-    max-width: 50%;
+    max-width: 100%;
   }
 }
