--- a/Frontend/src/Components/Navbar/Navbar.css
+++ b/Frontend/src/Components/Navbar/Navbar.css
@@ -3,13 +3,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 30px;
+  padding: 10px 20px;
   background-color: #ffffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 1000;
+  position: absolute;
+  transition: height 0.3s ease;
 }
 .close-dropdown{
   height: 0.5rem;
@@ -24,12 +23,12 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  margin-left: 7rem;
+  margin-left: 5rem;
 }
 
 .navbar-logo svg {
   width: 150px;
-  margin-right: 10px;
+  /* margin-right: 10px; */
   height: 80px;
 }
 
@@ -38,7 +37,7 @@
   color: #120202;
   list-style: none;
   padding-right: 120px;
-
+  position: relative;
 }
 
 .navbar-links a {
@@ -93,7 +92,7 @@
   padding-top: 2rem !important;
   padding: 1rem;
   width: 700px;
-  z-index: 10;
+  /* z-index: 999; */
   cursor: pointer;
 }
 
@@ -249,7 +248,6 @@
     overflow-y: auto;
   }
   .dropdown-nav-item {
-    background-color: #eae7e7;
     width: 30%;
     height: 150px;
     margin-bottom: 10px;
@@ -258,7 +256,6 @@
     transition: background-color 0.3s ease;
   }
   .dropdown-nav-item2 {
-    background-color: #eae7e7;
     min-width: 100px;
     height: 150px;
     margin-bottom: 10px;
@@ -308,7 +305,7 @@
     left: 0;
     right: 0;
     background-color: #fff;
-    z-index: 1000;
+    /* z-index: 1000; */
   }
 }
 @media (max-width: 425px) {
