--- a/Frontend/src/Components/RegistrationForm/Registration.css
+++ b/Frontend/src/Components/RegistrationForm/Registration.css
@@ -3,7 +3,13 @@
   margin: 30px auto;
   overflow-x: hidden;
 }
-
+.my-class{
+  border: 1px solid black;
+  color: green;
+  margin-top: 2%;
+  padding: 2%;
+  display: inline-block;
+}
 .header-logo svg {
   width: 15%;
 }
